[gd_scene load_steps=8 format=1]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://misc/icon_next_wave.png" type="Texture" id=2]
[ext_resource path="res://misc/heart.png" type="Texture" id=3]
[ext_resource path="res://icons/tower_1.png" type="Texture" id=4]
[ext_resource path="res://icons/tower_2.png" type="Texture" id=5]
[ext_resource path="res://misc/beacon.png" type="Texture" id=6]
[ext_resource path="res://misc/beacon_red.png" type="Texture" id=7]

[node name="main" type="Node2D"]

script/script = ExtResource( 1 )

[node name="hud" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="next_wave" type="Button" parent="hud"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1211.0
margin/top = 652.0
margin/right = 1269.0
margin/bottom = 710.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 2 )
flat = false

[node name="heart" type="Sprite" parent="hud"]

transform/pos = Vector2( 1217.58, 638.356 )
texture = ExtResource( 3 )

[node name="lifes" type="Label" parent="hud"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1227.0
margin/top = 632.0
margin/right = 1267.0
margin/bottom = 646.0
text = "10"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="gold" type="Label" parent="hud"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1204.0
margin/top = 6.0
margin/right = 1274.0
margin/bottom = 20.0
text = "100"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="helper" type="Label" parent="hud"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 7.0
margin/top = 678.0
margin/right = 704.0
margin/bottom = 716.0
text = "Welcome to Portokall"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="towers" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="tower_1" type="Button" parent="towers"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1211.0
margin/top = 30.0
margin/right = 1271.0
margin/bottom = 88.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 4 )
flat = false

[node name="tower_2" type="Button" parent="towers"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1211.0
margin/top = 98.0
margin/right = 1271.0
margin/bottom = 156.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 5 )
flat = false

[node name="spawn" type="Timer" parent="."]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false

[node name="point_start" type="Sprite" parent="."]

texture = ExtResource( 6 )
region = true
region_rect = Rect2( 0, 0, 32, 32 )

[node name="point_end" type="Sprite" parent="."]

texture = ExtResource( 7 )
region = true
region_rect = Rect2( 0, 0, 32, 32 )

[node name="helper" type="Timer" parent="."]

process_mode = 1
wait_time = 5.0
one_shot = false
autostart = true

[connection signal="pressed" from="hud/next_wave" to="." method="_on_next_wave_pressed"]

[connection signal="pressed" from="towers/tower_1" to="." method="_on_tower_1_pressed"]

[connection signal="pressed" from="towers/tower_2" to="." method="_on_tower_2_pressed"]

[connection signal="timeout" from="spawn" to="." method="_on_spawn_timeout"]

[connection signal="timeout" from="helper" to="." method="_on_helper_timeout"]


